[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/boid.png" type="Texture" id=1]
[ext_resource path="res://Objects/Boid/Boid.gd" type="Script" id=2]

[sub_resource type="CapsuleShape2D" id=3]
radius = 11.8455
height = 15.7167

[sub_resource type="ConvexPolygonShape2D" id=1]
points = PoolVector2Array( -150, -100, -50, -150, 50, -150, 150, -100, 64, 16, -64, 16 )

[sub_resource type="CircleShape2D" id=2]
radius = 41.8024

[node name="Boid" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
rotation = 1.5708
texture = ExtResource( 1 )
offset = Vector2( -0.5, 0 )
hframes = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource( 3 )

[node name="PerceptionArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PerceptionArea"]
rotation = 1.5708
shape = SubResource( 1 )

[node name="SeparationArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="SeparationArea"]
shape = SubResource( 2 )
[connection signal="body_entered" from="PerceptionArea" to="." method="_on_PerceptionArea_body_entered"]
[connection signal="body_exited" from="PerceptionArea" to="." method="_on_PerceptionArea_body_exited"]
[connection signal="body_entered" from="SeparationArea" to="." method="_on_SeparationArea_body_entered"]
[connection signal="body_exited" from="SeparationArea" to="." method="_on_SeparationArea_body_exited"]
